# AIZO_Projekt2

./: CMakeLists.txt  main.cpp
Algorithms/MST/: Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
Algorithms/SPT/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h
Graph/: AdjacencyList.cpp  AdjacencyList.h  IncidenceMatrix.cpp  IncidenceMatrix.h
Utils/: EdgesList.h  EdgesWrap.h  GenerateGraph.cpp  GenerateGraph.h  Menu.cpp  Menu.h  PathInfo.h  ReadGraph.cpp  ReadGraph.h  Test.cpp  Test.h  TransformGenerated.cpp  TransformGenerated.h
